// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`absolute paths in array values 1`] = `
Array [
  "~/__tests__/a/b.js",
  "~/__tests__/e/f.txt",
  42,
  Object {
    "bar": Object {
      "baz": 42,
    },
  },
]
`;

exports[`custom mask 1`] = `
Array [
  "<rootDir>/__tests__/a/b.js",
]
`;

exports[`ignore non plain objects 1`] = `
Object {
  "a": undefined,
  "b": null,
  "c": 1,
  "d": "x",
  "f": /x/,
  "g": Pizza {
    "data": "x",
  },
}
`;

exports[`recursively replace absolute paths in keys and values 1`] = `
Object {
  "foo": Object {
    "bar": 1,
    "~/__tests__/e/f.txt": "~/__tests__/g/h.txt",
  },
  "~/__tests__/a/b.js": "~/__tests__/c/d.js",
}
`;

exports[`recursively replace custom paths in keys and values 1`] = `
Object {
  "foo": Object {
    "bar": Object {
      "baz": 42,
    },
    "~/e/f.txt": "~/g/h.txt",
  },
  "~/a/b.js": "~/c/d.js",
}
`;
